@@ -13,6 +13,7 @@ interface
 - added propagation timing as parameter "proptiming" to SCIP_DECL_CONSPROP() and SCIP_DECL_PROPEXEC() as well as to
   the corresponding C++ wrapper classes
 - new method SCIPpropIsPresolDelayed() which return if a propagator is delay during presolving
+- changed parameters of function SCIPpropagateCutoffboundVar() in prop_pseudoobj.{c,h}
 
 performance improvements:
 - improved scaling of linear constraints, linear constraints with integral variables will now be scale with
